--- a/fifth.html
+++ b/fifth.html
@@ -90,7 +90,7 @@
 </head>
 <body>
   <div class="message">
-    💕💌 Here’s your final surprise, AKSHAYA... Enjoy the love & joy! 💖🎉
+    💕💌 You've made it through!Hope this surprise made your day alittle brighter 💖🎉
   </div>
   <img src="images/image5.jpg" alt="Surprise Image" class="explore-img" />
   
