--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <div class="message">
-    Hey AKSHAYA... this one's just for you! 💕
+    Hey ASTHA... this one's just for you! 💕
   </div>
   <!-- Let's Go Button -->
   <a href="main.html">
